@@ -1,15 +1,16 @@
 <?php
 /**
 * Smarty Internal Plugin Compile Capture
-*
-* Compiles the {capture} tag 
+* 
+* Compiles the {capture} tag
+* 
 * @package Smarty
 * @subpackage Compiler
-* @author Uwe Tews
+* @author Uwe Tews 
 */
 /**
 * Smarty Internal Plugin Compile Capture Class
-*/ 
+*/
 class Smarty_Internal_Compile_Capture extends Smarty_Internal_CompileBase {
     /**
     * Compiles code for the {capture} tag
@@ -20,22 +21,16 @@ class Smarty_Internal_Compile_Capture extends Smarty_Internal_CompileBase {
     */
     public function compile($args, $compiler)
     {
-        $this->compiler = $compiler; 
-        $this->optional_attributes = array('name', 'assign'); 
+        $this->compiler = $compiler;
+        $this->optional_attributes = array('name', 'assign', 'append'); 
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        if (isset($_attr['name']))
-            $buffer = $_attr['name'];
-        else
-            $buffer = "'default'";
+        $buffer = isset($_attr['name']) ? $_attr['name'] : "'default'";
+        $assign = isset($_attr['assign']) ? $_attr['assign'] : null;
+        $append = isset($_attr['append']) ? $_attr['append'] : null;
 
-        if (isset($_attr['assign']))
-            $assign = $_attr['assign'];
-        else
-            $assign = null;
-       
-        $this->_open_tag('capture',array($buffer, $assign));
+        $this->compiler->_capture_stack[] = array($buffer, $assign, $append);
 
         $_output = "<?php ob_start(); ?>";
 
