@@ -1,15 +1,16 @@
 <?php
 /**
 * Smarty Internal Plugin Compile Capture Close
-*
-* Compiles the {/capture} tag 
+* 
+* Compiles the {/capture} tag
+* 
 * @package Smarty
 * @subpackage Compiler
-* @author Uwe Tews
+* @author Uwe Tews 
 */
 /**
 * Smarty Internal Plugin Compile CaptureClose Class
-*/ 
+*/
 class Smarty_Internal_Compile_CaptureClose extends Smarty_Internal_CompileBase {
     /**
     * Compiles code for the {/capture} tag
@@ -21,16 +22,19 @@ class Smarty_Internal_Compile_CaptureClose extends Smarty_Internal_CompileBase {
     public function compile($args, $compiler)
     {
         $this->compiler = $compiler; 
-       // check and get attributes
+        // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $saved_attr = $this->_close_tag(array('capture'));
+        list($buffer, $assign, $append) = array_pop($this->compiler->_capture_stack);
 
         $_output = "<?php ";
-        if (isset($saved_attr[1])) {
-            $_output .= " \$_smarty_tpl->assign($saved_attr[1], ob_get_contents());";
+        if (isset($assign)) {
+            $_output .= " \$_smarty_tpl->assign($assign, ob_get_contents());";
         } 
-        $_output .= " \$_smarty_tpl->smarty->_smarty_vars['capture'][$saved_attr[0]]=ob_get_clean(); ?>\n";
+        if (isset($append)) {
+            $_output .= " \$_smarty_tpl->append($append, ob_get_contents());";
+        } 
+        $_output .= " \$_smarty_tpl->smarty->_smarty_vars['capture'][$buffer]=ob_get_clean(); ?>\n";
         return $_output;
     } 
 } 
