@@ -1,3 +1,6 @@
+10/07/2009
+- removed block nesting checks for {capture}
+
 10/05/2009
 - added support of "isinstance" to {if} tag
 
